# agentcast

./: .gitignore  .gitleaks.toml  AGENTS.md  Cargo.toml  FULL_REVIEW_ISSUES.md  Justfile  deny.toml  lefthook.yml
.beads/: issues.jsonl  metadata.json
.cargo/: config.toml
.config/: nextest.toml
.full-review/: 00-scope.md  01-quality-architecture.md  02-security-performance.md  03-testing-documentation.md  04-best-practices.md  05-final-report.md
apps/: AGENTS.md  README.md
crates/: AGENTS.md
crates/agent-acp/: Cargo.toml
crates/agent-acp/src/: error.rs  event.rs  lib.rs  permission.rs  session.rs
crates/agent-acp/src/event/: tests.rs
crates/agent-acp/src/permission/: tests.rs
crates/agent-api/: Cargo.toml
crates/agent-api/src/: gateway.rs  http.rs  lib.rs  oauth.rs  protected_mcp.rs
crates/agent-api/src/gateway/: tests.rs
crates/agent-api/src/http/: tests.rs
crates/agent-api/src/protected_mcp/: tests.rs
crates/agent-auth/: Cargo.toml
crates/agent-auth/src/: bearer.rs  lib.rs  oauth.rs  protected_resource.rs  scope.rs
crates/agent-auth/src/bearer/: tests.rs
crates/agent-auth/src/oauth/: tests.rs
crates/agent-auth/src/protected_resource/: tests.rs
crates/agent-auth/src/scope/: tests.rs
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: gateway.rs  lib.rs
crates/agent-cli/src/gateway/: tests.rs
crates/agent-config/: Cargo.toml
crates/agent-config/src/: discovery.rs  env_file.rs  env_merge.rs  error.rs  lib.rs  load.rs  mcp.rs  mcp_json.rs  mutation.rs  operations.rs  paths.rs  value_path.rs
crates/agent-config/src/discovery/: tests.rs
crates/agent-config/src/env_file/: tests.rs
crates/agent-config/src/env_merge/: tests.rs
crates/agent-config/src/load/: tests.rs
crates/agent-config/src/mcp_json/: tests.rs
crates/agent-config/src/mutation/: tests.rs
crates/agent-config/src/operations/: tests.rs
crates/agent-config/src/value_path/: tests.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: action.rs  error.rs  id.rs  json.rs  lib.rs  time.rs
crates/agent-core/src/action/: tests.rs
crates/agent-core/src/error/: tests.rs
crates/agent-fleet/: Cargo.toml
crates/agent-fleet/src/: capability.rs  execution.rs  heartbeat.rs  lib.rs  node.rs
crates/agent-fleet/src/heartbeat/: tests.rs
crates/agent-fleet/src/node/: tests.rs
crates/agent-gateway/: Cargo.toml
crates/agent-gateway/src/: catalog.rs  error.rs  exposure.rs  invoke.rs  lib.rs  oauth.rs  protected_routes.rs  router.rs
crates/agent-gateway/src/catalog/: tests.rs
crates/agent-gateway/src/exposure/: tests.rs
crates/agent-gateway/src/invoke/: tests.rs
crates/agent-gateway/src/oauth/: tests.rs
crates/agent-gateway/src/protected_routes/: tests.rs
crates/agent-gateway/src/router/: tests.rs
crates/agent-marketplace/: Cargo.toml
crates/agent-marketplace/src/: conflict.rs  error.rs  lib.rs  mcp.rs  mcp_params.rs  plan.rs
crates/agent-marketplace/src/mcp/: tests.rs
crates/agent-marketplace/src/mcp_params/: tests.rs
crates/agent-marketplace/src/plan/: tests.rs
crates/agent-mcp/: Cargo.toml
crates/agent-mcp/src/: client.rs  error.rs  gateway_server.rs  lib.rs  metadata.rs  result.rs  stdio.rs
crates/agent-mcp/src/fixtures/: mcp_echo_server.js
crates/agent-mcp/src/gateway_server/: tests.rs
crates/agent-mcp/src/metadata/: tests.rs
crates/agent-mcp/src/stdio/: tests.rs
crates/agent-observability/: Cargo.toml
crates/agent-observability/src/: activity.rs  health.rs  lib.rs  redaction.rs  tracing_setup.rs
crates/agent-observability/src/activity/: tests.rs
crates/agent-observability/src/health/: tests.rs
crates/agent-observability/src/redaction/: tests.rs
crates/agent-protocol/: Cargo.toml
crates/agent-protocol/src/: action.rs  ids.rs  lib.rs  mcp.rs
crates/agent-protocol/src/ids/: tests.rs
crates/agent-registry/: Cargo.toml
crates/agent-registry/src/: cache.rs  client.rs  error.rs  lib.rs  mcp.rs  search.rs
crates/agent-registry/src/cache/: tests.rs
crates/agent-registry/src/mcp/: tests.rs
crates/agent-registry/src/search/: tests.rs
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: catalog.rs  lib.rs  mcp_runtime.rs  process_state.rs  upstream.rs
crates/agent-runtime/src/catalog/: tests.rs
crates/agent-runtime/src/mcp_runtime/: tests.rs
crates/agent-runtime/src/process_state/: tests.rs
crates/agent-schema/: Cargo.toml
crates/agent-schema/src/: error.rs  field.rs  lib.rs  normalize.rs  validate.rs
crates/agent-schema/src/normalize/: tests.rs
crates/agent-schema/src/validate/: tests.rs
crates/agent-search/: Cargo.toml
crates/agent-search/src/: document.rs  index.rs  lib.rs  query.rs
crates/agent-search/src/index/: tests.rs
crates/agent-server/: Cargo.toml
crates/agent-server/src/: backend.rs  cli.rs  config.rs  config_cmd.rs  main.rs  oauth_store.rs  routes.rs  server.rs
crates/agent-server/src/cli/: args.rs  commands.rs  tests.rs
crates/agent-server/src/config/: tests.rs
crates/agent-server/src/oauth_store/: tests.rs
crates/agent-server/src/routes/: tests.rs
crates/agent-server/src/server/: tests.rs
crates/agent-stash/: Cargo.toml
crates/agent-stash/src/: export.rs  lib.rs  meta.rs  path.rs  revision.rs
crates/agent-stash/src/meta/: tests.rs
crates/agent-stash/src/path/: tests.rs
crates/agent-stash/src/revision/: tests.rs
crates/agent-store/: Cargo.toml
crates/agent-store/src/: catalog.rs  lib.rs  migrations.rs  oauth.rs  sqlite.rs
crates/agent-store/src/catalog/: tests.rs
crates/agent-store/src/migrations/: tests.rs
crates/agent-store/src/oauth/: tests.rs
crates/agent-ui-contracts/: Cargo.toml
crates/agent-ui-contracts/src/: gateway.rs  invocation.rs  lib.rs  marketplace.rs  registry.rs
crates/agent-ui-contracts/src/gateway/: tests.rs
crates/agent-ui-contracts/src/registry/: tests.rs
docs/: AGENTS.md  API.md  ARCH.md  CLI.md  CODE_ORGANIZATION.md  CONFIG.md  CRATE_BOUNDARIES.md  DECISIONS.md  DEVELOPMENT.md  DEV_SPEED.md  ERRORS.md  GATEWAY.md  INSTALL_PLANS.md  LAUNCHER.md  MARKETPLACE.md  MCP_RUNTIME.md  MVP.md  OBSERVABILITY.md  (+10 more)
(+283 files in other folders)
