[package]
name = "agent-acp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AgentCast Agent Client Protocol integration, session control, and ACP event handling."

[dependencies]
agent-core = { path = "../agent-core" }
agent-protocol = { path = "../agent-protocol" }

agent-client-protocol.workspace = true
async-trait.workspace = true
tokio-util.workspace = true

tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
jiff.workspace = true
url.workspace = true
