[package]
name = "agent-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AgentCast authentication primitives, bearer/session auth, and optional HTTP auth integration."

[dependencies]
agent-core = { path = "../agent-core" }
agent-config = { path = "../agent-config" }

sha2.workspace = true
hex.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
jiff.workspace = true
