[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core AgentCast types, IDs, events, errors, and shared primitives."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
jiff.workspace = true
url.workspace = true
