[package]
name = "agent-fleet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AgentCast fleet and remote runtime coordination for post-v0 node/device execution."

[dependencies]
serde.workspace = true
serde_json.workspace = true
