[package]
name = "agent-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AgentCast gateway for exposing, filtering, routing, and bridging MCP and ACP capabilities."

[dependencies]
agent-core = { path = "../agent-core" }
agent-auth = { path = "../agent-auth" }
agent-protocol = { path = "../agent-protocol" }
agent-runtime = { path = "../agent-runtime" }
agent-search = { path = "../agent-search" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
