[package]
name = "agent-marketplace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AgentCast marketplace discovery and installation model for Claude, Codex, MCP, ACP, and generated extensions."

[dependencies]
agent-core = { path = "../agent-core" }
agent-protocol = { path = "../agent-protocol" }
agent-registry = { path = "../agent-registry" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
jiff.workspace = true
