[package]
name = "agent-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AgentCast observability primitives, tracing setup, audit events, and redaction helpers."

[dependencies]
agent-core = { path = "../agent-core" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
jiff.workspace = true
uuid.workspace = true

