[package]
name = "agent-schema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AgentCast JSON Schema normalization, validation, CLI coercion, and form metadata."

[dependencies]
agent-core = { path = "../agent-core" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

