[package]
name = "agent-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AgentCast launcher search, ranking, indexing, and query normalization."

[dependencies]
agent-core = { path = "../agent-core" }
agent-protocol = { path = "../agent-protocol" }
agent-schema = { path = "../agent-schema" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

