[package]
name = "agent-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AgentCast server binary composition crate."

[[bin]]
name = "agentcast"
path = "src/main.rs"

[dependencies]
agent-core = { path = "../agent-core" }
agent-config = { path = "../agent-config" }
agent-protocol = { path = "../agent-protocol" }
agent-mcp = { path = "../agent-mcp" }
agent-registry = { path = "../agent-registry" }
agent-marketplace = { path = "../agent-marketplace" }
agent-runtime = { path = "../agent-runtime" }
agent-gateway = { path = "../agent-gateway" }
agent-auth = { path = "../agent-auth" }
agent-api = { path = "../agent-api" }
agent-cli = { path = "../agent-cli" }
agent-store = { path = "../agent-store" }

axum.workspace = true
tokio.workspace = true
async-trait.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
jiff.workspace = true
url.workspace = true
hex.workspace = true
