[package]
name = "agent-stash"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AgentCast stash, saved artifacts, history, and reusable context collections."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
